WallpaperPicker: BlissPie wallpapers
Big Thanks to @ROGERdotT

Includes the following commits:

Author: Michael Bestas <mkbestas@lineageos.org>
Date:   Mon, 26 Feb 2018 23:58:50 +0200

    WallpaperPicker: Fix build for 1440p devices

    * Also move the 1080p wallpapers to a separate folder

    Change-Id: I6636e1406fb85eab983d5b78a7654bc05a3d7ba7

Author: Dan Pasanen <dan.pasanen@gmail.com>
Date:   Tue, 27 Feb 2018 07:43:17 -0600

    WallpaperPicker: use 1440p images when screen width is greater than 1080

    * Many device with odd resolutions, but still having a width
      greater than 1080, will benefit from these. This also fixes tablets
      which often have widths of 2560 who would want these higher res
      versions.

    Change-Id: I9a1ce7851634e515ae3f4afe78867f90fe7fb6af

Change-Id: I9f4c579c012c3b732b6a8a0d0b6e6bcce4a9526e
Signed-off-by: Joey <joey@lineageos.org>
Signed-off-by: Jackeagle <jackeagle102@gmail.com>

--- a/res/values-nodpi/wallpapers.xml
+++ b/res/values-nodpi/wallpapers.xml
@@ -17,5 +17,11 @@
 
 <resources>
     <string-array name="wallpapers" translatable="false">
+        <item>bliss_beach</item>
+        <item>bliss_bubblediver</item>
+        <item>bliss_materialsunset</item>
+        <item>bliss_moonset</item>
+        <item>bliss_roundflame</item>
+        <item>bliss_tissue</item>
     </string-array>
 </resources>
